--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-tabs": "^1.1.13",
     "@tinymce/tinymce-react": "^6.3.0",
     "@uploadthing/react": "^7.3.3",
     "class-variance-authority": "^0.7.0",
@@ -42,6 +43,7 @@
     "next": "14.1.0",
     "next-intl": "^3.8.0",
     "next-themes": "^0.2.1",
+    "query-string": "^9.3.1",
     "react": "^18",
     "react-cookie": "^7.0.2",
     "react-dom": "^18",
