--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "i18next": "^23.9.0",
     "i18next-browser-languagedetector": "^7.2.0",
     "i18next-resources-to-backend": "^1.2.0",
+    "lodash": "^4.17.23",
     "lucide-react": "^0.331.0",
     "mongoose": "^9.1.5",
     "next": "14.1.0",
@@ -61,6 +62,7 @@
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.10",
+    "@types/lodash": "^4.17.23",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
